--- a/naver_scraping.ipynb
+++ b/naver_scraping.ipynb
@@ -349,11 +349,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 검색어를 네이버 url에 포함시켜 이동 + 검색 \n",
+    "driver.get('https://map.naver.com/p/search/{}'.format(\"강남구 서브웨이\"))\n",
+    "\n",
+    "# 저장 \n",
+    "naver_df = pd.DataFrame()\n",
+    "time.sleep(3)  \n",
+    "\n",
+    "\n",
+    "searchIframe = driver.find_element(By.ID,'searchIframe')\n",
+    "driver.switch_to.frame(searchIframe)\n",
+    "\n",
+    "# 클릭\n",
+    "driver.find_element_by_xpath('//*[@id=\"_pcmap_list_scroll_container\"]/ul/li[1]/div[1]/a/div/div/span[1]').click()\n",
+    "\n",
+    "\n",
+    "entryIframe = driver.find_element(By.ID,'entryIframe')\n",
+    "\n",
+    "# # 오른쪽 프레임\n",
+    "# entryIframe = driver.find_element(By.ID,'entryIframe')\n",
+    "# driver.switch_to.frame(entryIframe)\n",
+    "\n",
+    "# # 가게 이름, 변수로 지정\n",
+    "# restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
+    "\n",
+    "# # place_section no_margin OP4V8\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 지역+메뉴 이름 조합으로 url에 미리 포함시키는 driver.get 함수 , count는 검색했을때 조회하는 범위\n",
+    "# place는 매장명, count는 검색했을때 조회하는 범위\n",
     "def naver_finder(place,count) :\n",
     "\n",
     "  # 검색어를 네이버 url에 포함시켜 이동 + 검색 \n",
@@ -362,57 +396,56 @@
     "  # 저장 \n",
     "  naver_df = pd.DataFrame()\n",
     "  time.sleep(3)  \n",
+    "\n",
     "  try : \n",
-    "    # 목록의 1~9번째까지 반복\n",
-    "    for num in range(1,count+1) :\n",
-    "      # frame을 3갤 나눔 searchIframe(왼쪽), entryIframe(오른쪽),default_content(기본)\n",
+    "    # frame을 3갤 나눔 searchIframe(왼쪽), entryIframe(오른쪽),default_content(기본)\n",
     "\n",
-    "      # 왼쪽 프레임\n",
-    "      searchIframe = driver.find_element(By.ID,'searchIframe')\n",
-    "      driver.switch_to.frame(searchIframe)\n",
+    "    # 왼쪽 프레임\n",
+    "    searchIframe = driver.find_element(By.ID,'searchIframe')\n",
+    "    driver.switch_to.frame(searchIframe)\n",
     "\n",
-    "      try : \n",
-    "        # {}안에 num 입력 (1번째, 2번째...)\n",
-    "        # 각 카드 상단을 클릭하여 WebDriverWait을 활용 카드 상단 XPATH가 보일때까지 3초 대기 \n",
-    "        driver.find_element(By.XPATH,'//*[@id=\"_pcmap_list_scroll_container\"]/ul/li[{}]/div[1]/a'.format(num)).click()\n",
+    "    try : \n",
+    "      # {}안에 num 입력 (1번째, 2번째...)\n",
+    "      # 각 카드 상단을 클릭하여 WebDriverWait을 활용 카드 상단 XPATH가 보일때까지 3초 대기 \n",
+    "      driver.find_element(By.XPATH,'//*[@id=\"_pcmap_list_scroll_container\"]/ul/li[{}]/div[1]/a'.format(num)).click()\n",
     "\n",
-    "      except :\n",
-    "        # 가능하지 않다면 스크롤 내리고 최대 3초까지 기다렸다가 클릭\n",
-    "        # tag 내용이 안 보이면 해당 tag에서 스크롤 내림\n",
-    "        # click()이 안되는 경우 클릭을 대체하여 사용하기 \n",
-    "        driver.find_element(By.TAG_NAME,'body').send_keys(Keys.PAGE_DOWN)\n",
-    "        card_clik = driver.find_element(By.XPATH,'//*[@id=\"_pcmap_list_scroll_container\"]/ul/li[{}]/div[1]/a'.format(num))\n",
-    "        driver.execute_script('arguments[0].click();',card_clik)\n",
+    "    except :\n",
+    "      # 가능하지 않다면 스크롤 내리고 최대 3초까지 기다렸다가 클릭\n",
+    "      # tag 내용이 안 보이면 해당 tag에서 스크롤 내림\n",
+    "      # click()이 안되는 경우 클릭을 대체하여 사용하기 \n",
+    "      driver.find_element(By.TAG_NAME,'body').send_keys(Keys.PAGE_DOWN)\n",
+    "      card_clik = driver.find_element(By.XPATH,'//*[@id=\"_pcmap_list_scroll_container\"]/ul/li[{}]/div[1]/a'.format(num))\n",
+    "      driver.execute_script('arguments[0].click();',card_clik)\n",
     "\n",
-    "      # 기본 프레임\n",
-    "      time.sleep(1)\n",
-    "      driver.switch_to.default_content()\n",
+    "    # 기본 프레임\n",
+    "    time.sleep(1)\n",
+    "    driver.switch_to.default_content()\n",
     "\n",
-    "      # 오른쪽 프레임\n",
-    "      entryIframe = driver.find_element(By.ID,'entryIframe')\n",
-    "      driver.switch_to.frame(entryIframe)\n",
+    "    # 오른쪽 프레임\n",
+    "    entryIframe = driver.find_element(By.ID,'entryIframe')\n",
+    "    driver.switch_to.frame(entryIframe)\n",
     "\n",
-    "      # 가게 이름, 변수로 지정\n",
-    "      restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
+    "    # 가게 이름, 변수로 지정\n",
+    "    restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
     "\n",
-    "      # 가게 별점이 있는 경우에만 try \n",
-    "      try :\n",
-    "        review_star = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
-    "        review_star = re.sub('방문자리뷰',\"\",review_star)\n",
-    "      except :\n",
-    "        review_star = 0\n",
-    "        pass \n",
+    "    # 가게 별점이 있는 경우에만 try \n",
+    "    try :\n",
+    "      review_star = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "      review_star = re.sub('방문자리뷰',\"\",review_star)\n",
+    "    except :\n",
+    "      review_star = 0\n",
+    "      pass \n",
     "\n",
-    "      # 기본 설정으로 돌아오기\n",
-    "      time.sleep(1)\n",
-    "      driver.switch_to.default_content()\n",
+    "    # 기본 설정으로 돌아오기\n",
+    "    time.sleep(1)\n",
+    "    driver.switch_to.default_content()\n",
     "\n",
-    "      print(restaurant_name,review_star)\n",
-    "      \n",
-    "      # 수정 필요 \n",
-    "      df = pd.DataFrame({'가게명':[restaurant_name],'네이버별점' : [review_star]})\n",
-    "      naver_df = pd.concat([naver_df,df])\n",
-    "      naver_df.drop_duplicates() # 중복 제거 \n",
+    "    print(restaurant_name,review_star)\n",
+    "    \n",
+    "    # 수정 필요 \n",
+    "    df = pd.DataFrame({'가게명':[restaurant_name],'네이버별점' : [review_star]})\n",
+    "    naver_df = pd.concat([naver_df,df])\n",
+    "    naver_df.drop_duplicates() # 중복 제거 \n",
     "  except :\n",
     "    print('정상적으로 작동이 되지 않습니다.')\n",
     "\n",
