--- a/naver_review.ipynb
+++ b/naver_review.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Can not find chromedriver for currently installed chrome version.\n"
+     ]
+    }
+   ],
    "source": [
     "url = 'https://m.place.naver.com/restaurant/13149660/review/visitor?entry=pll'\n",
     "\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "\n",
+    "\n",
+    "# webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
+    "import chromedriver_autoinstaller\n",
+    "chromedriver_autoinstaller.install()\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "\n",
     "res = driver.get(url)\n",
     "driver.implicitly_wait(10)\n",
     "\n",
@@ -68,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +276,7 @@
        "25     직접 잘 구워줘요     1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
