--- a/naver_scraping(연습).ipynb
+++ b/naver_scraping(연습).ipynb
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "Name: 사업장명, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1036,11 +1036,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "카테고리 + 이름 없으면 ㄱㄱ "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in df_top10['사업장명']:\n",
+    "    # 검색어를 네이버 url에 포함시켜 이동 + 검색 \n",
+    "    name = i\n",
+    "    driver.get('https://map.naver.com/p/search/{}'.format(name))\n",
+    "\n",
+    "    # 저장 \n",
+    "    naver_df = pd.DataFrame()\n",
+    "\n",
+    "    time.sleep(3)  \n",
+    "\n",
+    "    \n",
+    "    searchIframe = driver.find_element(By.ID,'searchIframe')\n",
+    "    driver.switch_to.frame(searchIframe)\n",
+    "    time.sleep(3) \n",
+    "# 검색결과 or 식당으로 바로 넘어가는 결과가 나옴 \n",
+    "# ----------------------------------------------------------\n",
+    "\n",
+    "    ## 식당이름 + 별점 or 리뷰만 크롤링한다고 했을때 \n",
+    "    ## 바로 넘어가면 Fc1rA이 있고 검색결과만 떴을때는 Fc1rA없음 \n",
+    "    ## 그래서 if문 써서 class이름으로 찾아서 \n",
+    "    if driver.find_elements(By.CLASS_NAME,'Fc1rA') == True :\n",
+    "        restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
+    "        review_star = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "        \n",
+    "    else :\n",
+    "        try:\n",
+    "        # {}안에 num 입력 (1번째, 2번째...)\n",
+    "        # 각 카드 상단을 클릭하여 WebDriverWait을 활용 카드 상단 XPATH가 보일때까지 3초 대기 \n",
+    "\n",
+    "            driver.find_element(By.CLASS_NAME,'YwYLL').click()\n",
+    "            time.sleep(3) \n",
+    "            \n",
+    "        except  :\n",
+    "            # 가능하지 않다면 스크롤 내리고 최대 3초까지 기다렸다가 클릭\n",
+    "            # tag 내용이 안 보이면 해당 tag에서 스크롤 내림\n",
+    "            # click()이 안되는 경우 클릭을 대체하여 사용하기 \n",
+    "            driver.find_element(By.TAG_NAME,'body').send_keys(Keys.PAGE_DOWN)\n",
+    "            card_clik = driver.find_element(By.CLASS_NAME,'TTfa9')\n",
+    "            driver.execute_script('arguments[0].click();',card_clik)\n",
+    "\n",
+    "        # 기본 프레임\n",
+    "        time.sleep(1)\n",
+    "        driver.switch_to.default_content()\n",
+    "                \n",
+    "        # 오른쪽 프레임\n",
+    "        entryIframe = driver.find_element(By.ID,'entryIframe')\n",
+    "        driver.switch_to.frame(entryIframe)\n",
+    "\n",
+    "        # 가게 이름, 변수로 지정\n",
+    "        restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
+    "\n",
+    "        # 가게 별점이 있는 경우에만 try \n",
+    "        ## 별점\n",
+    "        try :\n",
+    "            review_star = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "            review_star = review_star[3:]\n",
+    "        except :\n",
+    "            review_star = 0\n",
+    "            pass \n",
+    "    # 기본 설정으로 돌아오기\n",
+    "    time.sleep(1)\n",
+    "    driver.switch_to.default_content()\n",
+    "\n",
+    "    print(restaurant_name,review_star)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1089,6 +1161,7 @@
     "    if driver.find_elements(By.CLASS_NAME,'Fc1rA') == True :\n",
     "        restaurant_name = driver.find_element(By.CLASS_NAME,'Fc1rA').text\n",
     "        review_star = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "        \n",
     "    else :\n",
     "        try:\n",
     "        # {}안에 num 입력 (1번째, 2번째...)\n",
@@ -1129,13 +1202,6 @@
     "    driver.switch_to.default_content()\n",
     "\n",
     "    print(restaurant_name,review_star)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이건 지피티 껀데 창이 넘어가긴 함 ."
    ]
   },
   {
