Feat: 스크롤 기능 추가 및 요일/일자 구분 기능 추가
리뷰 페이지에서 스크롤 기능을 추가하여 한 번에 더 많은 유저 리뷰 데이터를 가져올 수 있도록 함.
날짜에서 요일과 일자를 구분하여 저장하는 기능 추가.
tag를 list에서 str로 수정함

--- a/naver_user_scraping.ipynb
+++ b/naver_user_scraping.ipynb
@@ -51,7 +51,8 @@
     "from selenium.common.exceptions import TimeoutException, NoSuchElementException  \n",
     "\n",
     "# 웹 요소 찾기 관련 라이브러리\n",
-    "from selenium.webdriver.common.by import By  \n",
+    "from selenium.webdriver.common.by import By  git pull origin main\n",
+    "\n",
     "from selenium.webdriver.support.ui import Select  \n",
     "from selenium.webdriver.common.keys import Keys  \n",
     "\n",
