--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -298,7 +298,9 @@
     "\n",
     "만소당 -> test 데이터로 돌릴떈 프레임 넘어가고 정보도 잘 불러옴 근데 전체로 할떈 안불러옴 \n",
     "\n",
-    "-> 이거 말고 더 있을 수 있음 "
+    "-> 이거 말고 더 있을 수 있음 \n",
+    "\n",
+    "--> 기다리는 시간을 바꿔보자 "
    ]
   },
   {
@@ -679,23 +681,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'naver_df_200' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mnaver_df_200\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'naver_df_200' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>식당이름</th>\n",
+       "      <th>업태구분</th>\n",
+       "      <th>주소</th>\n",
+       "      <th>메뉴</th>\n",
+       "      <th>가격</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>냉동고집 삼성점</td>\n",
+       "      <td>육류,고기요리</td>\n",
+       "      <td>서울 강남구 삼성로 517 1층 104호</td>\n",
+       "      <td>냉동삼겹살</td>\n",
+       "      <td>15,000원</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>리하베스트</td>\n",
+       "      <td>카페,디저트</td>\n",
+       "      <td>서울 강남구 역삼로 220 1층</td>\n",
+       "      <td>메뉴없음</td>\n",
+       "      <td>가격없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>팡뮤제 베이커리</td>\n",
+       "      <td>베이커리</td>\n",
+       "      <td>경기 김포시 풍무로 128 웰라움퍼펙트시티 1층</td>\n",
+       "      <td>아메리카노</td>\n",
+       "      <td>4,800원</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>만소당</td>\n",
+       "      <td>돈가스</td>\n",
+       "      <td>서울 강남구 논현로159길 10 104호</td>\n",
+       "      <td>돈까스</td>\n",
+       "      <td>13,000원</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>꼬모 서울</td>\n",
+       "      <td>카페,디저트</td>\n",
+       "      <td>서울 강남구 봉은사로74길 19 1층</td>\n",
+       "      <td>이탈리안 티라미수</td>\n",
+       "      <td>6,500원</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       식당이름     업태구분                          주소         메뉴       가격\n",
+       "0  냉동고집 삼성점  육류,고기요리      서울 강남구 삼성로 517 1층 104호      냉동삼겹살  15,000원\n",
+       "1     리하베스트   카페,디저트           서울 강남구 역삼로 220 1층       메뉴없음     가격없음\n",
+       "2  팡뮤제 베이커리     베이커리  경기 김포시 풍무로 128 웰라움퍼펙트시티 1층      아메리카노   4,800원\n",
+       "3       만소당      돈가스      서울 강남구 논현로159길 10 104호        돈까스  13,000원\n",
+       "4     꼬모 서울   카페,디저트        서울 강남구 봉은사로74길 19 1층  이탈리안 티라미수   6,500원"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "naver_df_200.head()"
+    "naver_df_200.head()\n"
    ]
   },
   {
