Fix : csv 저장 경로 수정
data 폴더 내 저장으로 변경

--- a/naver_user_scraping.ipynb
+++ b/naver_user_scraping.ipynb
@@ -1875,10 +1875,10 @@
    "outputs": [],
    "source": [
     "# 유저의 리뷰\n",
-    "user_df.to_excel('user_df.xlsx', index=False)\n",
+    "user_df.to_excel('data/user_df.xlsx', index=False)\n",
     "\n",
     "# 유저의 정보 \n",
-    "user_profile_df.to_excel('user_profile_df.xlsx', index=False)"
+    "user_profile_df.to_excel('data/user_profile_df.xlsx', index=False)"
    ]
   },
   {
