--- a/naver_매장존재확인_크롤링.ipynb
+++ b/naver_매장존재확인_크롤링.ipynb
@@ -2093,7 +2093,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df_200.to_csv('new_df_200.csv')"
+    "new_df_200.to_csv('data/new_df_200.csv')"
    ]
   }
  ],
