--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -1980,6 +1980,81 @@
    "source": [
     "naver_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 카카오맵 별점 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 웹 드라이버 설정\n",
+    "from selenium import webdriver  \n",
+    "from webdriver_manager.chrome import ChromeDriverManager \n",
+    "\n",
+    "# 대기 관련 라이브러리\n",
+    "from selenium.webdriver.support.ui import WebDriverWait \n",
+    "from selenium.webdriver.support import expected_conditions as EC \n",
+    "\n",
+    "# 웹 요소 찾기 관련 라이브러리\n",
+    "from selenium.webdriver.common.by import By  \n",
+    "from selenium.webdriver.common.keys import Keys  \n",
+    "\n",
+    "# 그 외 \n",
+    "import time \n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "\n",
+    "# 카카오 별점 가져오는 함수 \n",
+    "def kakao_finder(place,name) :\n",
+    "    # 검색어 = 지역명 + 가게명 ex) 강남구 떡도리탕\n",
+    "    kakao_search_term = place + \" \" + name\n",
+    "\n",
+    "    # 검색 결과가 있을 때\n",
+    "    try :               \n",
+    "        time.sleep(3)\n",
+    "        WebDriverWait(driver,3).until(EC.presence_of_all_elements_located((By.ID,'search.keyword.query')))\n",
+    "        # 검색 박스 비우고 검색어 입력하고 enter\n",
+    "        driver.find_element(By.ID,'search.keyword.query').clear()\n",
+    "        driver.find_element(By.ID,'search.keyword.query').send_keys(kakao_search_term)\n",
+    "        driver.find_element(By.ID,'search.keyword.query').send_keys(Keys.RETURN)\n",
+    "\n",
+    "        # 2초 대기\n",
+    "        time.sleep(2)\n",
+    "\n",
+    "        # 별점 저장\n",
+    "        kakao_star = driver.find_element(By.XPATH,'//*[@id=\"info.search.place.list\"]/li[1]/div[4]/span[1]/em').text\n",
+    "        kakao_star = float(kakao_star)\n",
+    "        \n",
+    "    # 검색 결과가 없을 때\n",
+    "    except :\n",
+    "        kakao_star = '없음' \n",
+    "    \n",
+    "    return kakao_star\n",
+    "\n",
+    "\n",
+    "# test \n",
+    "url = 'https://map.kakao.com/'\n",
+    "\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "driver.get(url)\n",
+    "\n",
+    "지역구 = '강남구'\n",
+    "매장명 = ['맥도날드','호랑가시','떡도리탕']\n",
+    "star = {}\n",
+    "\n",
+    "for i in range(len(매장명)) :\n",
+    "    star[매장명[i]] = kakao_finder(지역구,매장명[i])\n",
+    "\n",
+    "star"
+   ]
   }
  ],
  "metadata": {
