--- a/naver_매장존재확인_크롤링.ipynb
+++ b/naver_매장존재확인_크롤링.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('filtered_data_서울특별시강남구.csv')\n",
+    "df = pd.read_csv('date/filtered_data_서울특별시강남구.csv')\n",
     "df.head(5)"
    ]
   },
