Feat : 데이터셋 원본 전처리 추가

--- a/naver_매장존재확인_크롤링.ipynb
+++ b/naver_매장존재확인_크롤링.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 네이버 매장 존재 여부 확인 크롤링\n",
-    "\n",
-    "#### 자료 \n",
-    "https://www.localdata.go.kr/devcenter/dataDown.do?menuNo=20001\n",
-    "\n",
-    "1. 관광식당, 일반음식점, 휴게음식점 데이터셋 다운로드(07_24_01_P_.csv.zip, 07_24_04_P_.csv.zip , 07_24_05_P_.csv.zip)\n",
-    "2. 다운로드한 파일들을 data 폴더에 넣어주세요. (압축풀지말고)"
+    "# 네이버 매장 존재 여부 확인 크롤링"
    ]
   },
   {
@@ -23,6 +17,17 @@
     "3. 검색하면 전혀 다른 업체가 나오는 경우가 있음 -> 네이버 업태구분명을 크롤링해와서 참고하여 반영해야 \n",
     "4. 나라에서 제공하는 data를 사용하는 경우 인기도를 알기 어려움. 아닌가. -> 네이버 지도 api를 사용해서 점수를 부여할까? \n",
     "5. 자료 업데이트 시기 문제 - data를 다운로드 받아서 사용하는 경우, 매장 정보는 계속 바뀐는데 업데이트가 늦잖아... 매장 정보의 변동이 생기 사람이 계속 업로드를 해야 하잖아.. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 자료 \n",
+    "https://www.localdata.go.kr/devcenter/dataDown.do?menuNo=20001\n",
+    "\n",
+    "1. 관광식당, 일반음식점, 휴게음식점 데이터셋 다운로드(07_24_01_P_.csv.zip, 07_24_04_P_.csv.zip , 07_24_05_P_.csv.zip)\n",
+    "2. 다운로드한 파일들을 data 폴더에 넣어주세요. (압축풀지말고)"
    ]
   },
   {
@@ -64,6 +69,136 @@
     "from selenium import webdriver\n",
     "import chromedriver_autoinstaller\n",
     "import webbrowser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 매장 데이터 다운로드 후 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # zip 파일 압축 풀기 \n",
+    "\n",
+    "# folder_path = './data'\n",
+    "# zip_folder = './data/zip_data'\n",
+    "\n",
+    "# # data 폴더 안에 있는 압축 파일들 압축 풀기\n",
+    "# for file in os.listdir(folder_path):\n",
+    "#     zip_file_path = os.path.join(folder_path, file)\n",
+    "#     if zipfile.is_zipfile(zip_file_path): \n",
+    "#         with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "#             zip_ref.extractall(zip_folder)\n",
+    "\n",
+    "# # csv 파일이 큰 순서대로 정렬\n",
+    "# csv_files_sorted = sorted([os.path.join(zip_folder, f) for f in os.listdir(zip_folder) if f.endswith('.csv')],\n",
+    "#                           key=lambda x: os.path.getsize(x),reverse=True)\n",
+    "# csv_files_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 첫번째 데이터 불러오기 (데이터 크기가 커서 둘로 나눈뒤 합침)\n",
+    "# chunk_size = 1000000\n",
+    "# chunks = pd.read_csv(csv_files_sorted[0], encoding='cp949', encoding_errors='ignore', chunksize=chunk_size)\n",
+    "# df1_1 = next(chunks)  # 첫 번째 청크(1,000,000 행) 읽기\n",
+    "# df1_2 = pd.concat(chunks, ignore_index=True)  # 나머지 데이터 읽기\n",
+    "\n",
+    "# # 현재 운영하고 있는 매장만 가져와서 합치기 \n",
+    "# df1_1.drop(df1_1[df1_1['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "# df1_2.drop(df1_2[df1_2['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "# df1 = pd.concat([df1_1, df1_2], ignore_index=True)\n",
+    "\n",
+    "# # 두번째 데이터 불러오기 \n",
+    "# df2 = pd.read_csv(csv_files_sorted[1], encoding='cp949', encoding_errors='ignore')\n",
+    "# df2.columns\n",
+    "\n",
+    "# # 세번째 데이터 불러오기 \n",
+    "# df3 = pd.read_csv(csv_files_sorted[2], encoding='cp949', encoding_errors='ignore')\n",
+    "# df3.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 필요한 컬럼만 들고 오기 \n",
+    "# selected_columns = ['영업상태명', '소재지전체주소', '도로명전체주소', '사업장명', '최종수정시점','데이터갱신일자','업태구분명', '좌표정보(x)', '좌표정보(y)','위생업태명']\n",
+    "\n",
+    "# df1 = df1[selected_columns]\n",
+    "\n",
+    "# # 지역구 구분하기 \n",
+    "# df1['시도'] = df1['소재지전체주소'].apply(lambda x: x.split(' ', 1)[0] if pd.notna(x) else None)\n",
+    "# df1['지역구'] = df1['소재지전체주소'].apply(lambda x: x.split(' ')[1] if pd.notna(x) and len(x.split(' ')) > 1 else None)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # 현재 운영하고 있는 매장만 가져오기\n",
+    "# df2.drop(df2[df2['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "\n",
+    "# # 필요한 컬럼만 들고 오기 \n",
+    "# df2 = df2[selected_columns]\n",
+    "\n",
+    "# # 지역구 구분하기 \n",
+    "# df2['시도'] = df2['소재지전체주소'].apply(lambda x: x.split(' ', 1)[0] if pd.notna(x) else None)\n",
+    "# df2['지역구'] = df2['소재지전체주소'].apply(lambda x: x.split(' ')[1] if pd.notna(x) and len(x.split(' ')) > 1 else None)\n",
+    "\n",
+    "\n",
+    "# # 현재 운영하고 있는 매장만 가져오기\n",
+    "# df3.drop(df3[df3['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "\n",
+    "# # 필요한 컬럼만 들고 오기 \n",
+    "# df3 = df1[selected_columns]\n",
+    "\n",
+    "# # 지역구 구분하기 \n",
+    "# df3['시도'] = df3['소재지전체주소'].apply(lambda x: x.split(' ', 1)[0] if pd.notna(x) else None)\n",
+    "# df3['지역구'] = df3['소재지전체주소'].apply(lambda x: x.split(' ')[1] if pd.notna(x) and len(x.split(' ')) > 1 else None)\n",
+    "\n",
+    "# # 데이터 합치고 중복제거\n",
+    "# origin_df = pd.concat([df1, df2, df3], ignore_index=True).drop_duplicates()\n",
+    "# origin_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# origin_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # '시도' 컬럼이 '서울특별시'면서 '지역구' 값이 '강남구'인 행만 필터링\n",
+    "# df = origin_df[(origin_df['시도'] == city ) & (origin_df['지역구'] == gu )]\n",
+    "# df.head()\n",
+    "\n",
+    "# # csv 파일로 저장\n",
+    "# df.to_csv('filtered_data_{}{}.csv'.format(city,gu), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 매장 존재 여부 확인"
    ]
   },
   {
@@ -1558,7 +1693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
