Rename: 파일명 변경 (never_review)

--- a/naver_review_(원본).ipynb
+++ b/naver_review_(원본).ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (5.2.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,27 +109,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>음식이 맛있어요</td>\n",
-       "      <td>1103</td>\n",
+       "      <td>1131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>재료가 신선해요</td>\n",
-       "      <td>723</td>\n",
+       "      <td>735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>혼밥하기 좋아요</td>\n",
-       "      <td>612</td>\n",
+       "      <td>618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>친절해요</td>\n",
-       "      <td>300</td>\n",
+       "      <td>301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>가성비가 좋아요</td>\n",
-       "      <td>254</td>\n",
+       "      <td>257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -130,17 +139,17 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>매장이 넓어요</td>\n",
-       "      <td>206</td>\n",
+       "      <td>208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>특별한 메뉴가 있어요</td>\n",
-       "      <td>127</td>\n",
+       "      <td>130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>양이 많아요</td>\n",
-       "      <td>122</td>\n",
+       "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -150,7 +159,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>건강한 맛이에요</td>\n",
-       "      <td>19</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -233,17 +242,17 @@
       ],
       "text/plain": [
        "             tag    인원\n",
-       "0       음식이 맛있어요  1103\n",
-       "1       재료가 신선해요   723\n",
-       "2       혼밥하기 좋아요   612\n",
-       "3           친절해요   300\n",
-       "4       가성비가 좋아요   254\n",
+       "0       음식이 맛있어요  1131\n",
+       "1       재료가 신선해요   735\n",
+       "2       혼밥하기 좋아요   618\n",
+       "3           친절해요   301\n",
+       "4       가성비가 좋아요   257\n",
        "5       매장이 청결해요   241\n",
-       "6        매장이 넓어요   206\n",
-       "7    특별한 메뉴가 있어요   127\n",
-       "8         양이 많아요   122\n",
+       "6        매장이 넓어요   208\n",
+       "7    특별한 메뉴가 있어요   130\n",
+       "8         양이 많아요   125\n",
        "9      인테리어가 멋져요    42\n",
-       "10      건강한 맛이에요    19\n",
+       "10      건강한 맛이에요    20\n",
        "11        뷰가 좋아요    19\n",
        "12     화장실이 깨끗해요    13\n",
        "13      주차하기 편해요    11\n",
@@ -261,7 +270,7 @@
        "25     직접 잘 구워줘요     1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
