Fix : 불러오기할 파일 변경

--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -25,7 +25,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (5.2.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# 웹 드라이버 설정\n",
     "from selenium import webdriver  \n",
@@ -57,18 +66,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -84,16 +81,14 @@
    "source": [
     "# # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
     "# driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "# # 주소 이동\n",
-    "# url = 'https://map.naver.com/'\n",
-    "# driver.get(url)\n",
-    "# time.sleep(1)\n",
     "\n",
     "\n",
     "# webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
     "import chromedriver_autoinstaller\n",
     "chromedriver_autoinstaller.install()\n",
     "driver = webdriver.Chrome()\n",
+    "\n",
+    "\n",
     "# 주소 이동\n",
     "url = 'https://map.naver.com/'\n",
     "driver.get(url)\n",
@@ -102,39 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_df = pd.read_excel('combined_file1_22.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_df = res_df.loc[res_df['검색여부']=='가능',:]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_info_df = pd.DataFrame()\n",
-    "restaurant_name_list = []\n",
-    "category_name_list = []\n",
-    "address_list = []\n",
-    "menu_list = []\n",
-    "price_list = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +121,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>영업상태명</th>\n",
        "      <th>소재지전체주소</th>\n",
        "      <th>도로명전체주소</th>\n",
@@ -171,13 +133,11 @@
        "      <th>상세주소</th>\n",
        "      <th>사업장명_원본</th>\n",
        "      <th>검색여부</th>\n",
-       "      <th>index_original</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>영업/정상</td>\n",
        "      <td>서울특별시 강남구 논현동 198-9</td>\n",
        "      <td>서울특별시 강남구 강남대로114길 18, 지상1층 102호 (논현동)</td>\n",
@@ -190,11 +150,9 @@
        "      <td>강남대로114길 18,</td>\n",
        "      <td>정식당</td>\n",
        "      <td>가능</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>영업/정상</td>\n",
        "      <td>서울특별시 강남구 역삼동 825-9 준빌딩</td>\n",
        "      <td>서울특별시 강남구 강남대로 378, 준빌딩 지상1층 (역삼동)</td>\n",
@@ -207,11 +165,9 @@
        "      <td>강남대로 378,</td>\n",
        "      <td>채선당 샤브보트 강남역점</td>\n",
        "      <td>가능</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>영업/정상</td>\n",
        "      <td>서울특별시 강남구 압구정동 494 갤러리아백화점</td>\n",
        "      <td>서울특별시 강남구 압구정로 343, 갤러리아백화점 지하1층 (압구정동)</td>\n",
@@ -224,11 +180,9 @@
        "      <td>압구정로 343,</td>\n",
        "      <td>수아당</td>\n",
        "      <td>가능</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5</td>\n",
        "      <td>영업/정상</td>\n",
        "      <td>서울특별시 강남구 역삼동 769-1 삼환 아르누보</td>\n",
        "      <td>서울특별시 강남구 역삼로 204, 삼환 아르누보 지하1층 B09,B10호 중 107...</td>\n",
@@ -241,11 +195,9 @@
        "      <td>역삼로 204,</td>\n",
        "      <td>알찬한끼</td>\n",
        "      <td>가능</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7</td>\n",
        "      <td>영업/정상</td>\n",
        "      <td>서울특별시 강남구 삼성동 155-11</td>\n",
        "      <td>서울특별시 강남구 삼성로96길 11, 지상2층 (삼성동)</td>\n",
@@ -258,61 +210,191 @@
        "      <td>삼성로96길 11,</td>\n",
        "      <td>세계관</td>\n",
        "      <td>가능</td>\n",
-       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8291</th>\n",
+       "      <td>영업/정상</td>\n",
+       "      <td>서울특별시 강남구 대치동 937 롯데백화점</td>\n",
+       "      <td>서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)</td>\n",
+       "      <td>간코</td>\n",
+       "      <td>일식</td>\n",
+       "      <td>204669.543367</td>\n",
+       "      <td>443873.621189</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>도곡로 401,</td>\n",
+       "      <td>간코 롯데백화점강남점</td>\n",
+       "      <td>가능</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8292</th>\n",
+       "      <td>영업/정상</td>\n",
+       "      <td>서울특별시 강남구 신사동 528-3 덕산빌딩</td>\n",
+       "      <td>서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)</td>\n",
+       "      <td>오토김밥</td>\n",
+       "      <td>분식</td>\n",
+       "      <td>201749.456414</td>\n",
+       "      <td>446742.828124</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>압구정로 108,</td>\n",
+       "      <td>오토김밥 신사점</td>\n",
+       "      <td>가능</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8293</th>\n",
+       "      <td>영업/정상</td>\n",
+       "      <td>서울특별시 강남구 신사동 635-14 금광아크존1</td>\n",
+       "      <td>서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)</td>\n",
+       "      <td>마들마들</td>\n",
+       "      <td>한식</td>\n",
+       "      <td>202990.870783</td>\n",
+       "      <td>447146.555568</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>압구정로42길 36,</td>\n",
+       "      <td>마들마들</td>\n",
+       "      <td>가능</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8294</th>\n",
+       "      <td>영업/정상</td>\n",
+       "      <td>서울특별시 강남구 신사동 629-1</td>\n",
+       "      <td>서울특별시 강남구 언주로151길 21, 지상1층 (신사동)</td>\n",
+       "      <td>세바</td>\n",
+       "      <td>경양식</td>\n",
+       "      <td>202731.421127</td>\n",
+       "      <td>446609.460134</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>언주로151길 21,</td>\n",
+       "      <td>세바(Sevva)</td>\n",
+       "      <td>가능</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8295</th>\n",
+       "      <td>영업/정상</td>\n",
+       "      <td>서울특별시 강남구 신사동 552-5</td>\n",
+       "      <td>서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)</td>\n",
+       "      <td>구구구</td>\n",
+       "      <td>경양식</td>\n",
+       "      <td>202153.410454</td>\n",
+       "      <td>446748.562578</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>논현로161길 37,</td>\n",
+       "      <td>구구구 (GOOGOOGOO)</td>\n",
+       "      <td>가능</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8296 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  영업상태명                      소재지전체주소  \\\n",
-       "0           0  영업/정상          서울특별시 강남구 논현동 198-9   \n",
-       "1           1  영업/정상      서울특별시 강남구 역삼동 825-9 준빌딩   \n",
-       "2           3  영업/정상   서울특별시 강남구 압구정동 494 갤러리아백화점   \n",
-       "3           5  영업/정상  서울특별시 강남구 역삼동 769-1 삼환 아르누보   \n",
-       "4           7  영업/정상         서울특별시 강남구 삼성동 155-11   \n",
+       "      영업상태명                      소재지전체주소  \\\n",
+       "0     영업/정상          서울특별시 강남구 논현동 198-9   \n",
+       "1     영업/정상      서울특별시 강남구 역삼동 825-9 준빌딩   \n",
+       "2     영업/정상   서울특별시 강남구 압구정동 494 갤러리아백화점   \n",
+       "3     영업/정상  서울특별시 강남구 역삼동 769-1 삼환 아르누보   \n",
+       "4     영업/정상         서울특별시 강남구 삼성동 155-11   \n",
+       "...     ...                          ...   \n",
+       "8291  영업/정상      서울특별시 강남구 대치동 937 롯데백화점   \n",
+       "8292  영업/정상     서울특별시 강남구 신사동 528-3 덕산빌딩   \n",
+       "8293  영업/정상  서울특별시 강남구 신사동 635-14 금광아크존1   \n",
+       "8294  영업/정상          서울특별시 강남구 신사동 629-1   \n",
+       "8295  영업/정상          서울특별시 강남구 신사동 552-5   \n",
        "\n",
-       "                                             도로명전체주소      사업장명 업태구분명  \\\n",
-       "0             서울특별시 강남구 강남대로114길 18, 지상1층 102호 (논현동)       정식당    한식   \n",
-       "1                 서울특별시 강남구 강남대로 378, 준빌딩 지상1층 (역삼동)  채선당 샤브보트    한식   \n",
-       "2            서울특별시 강남구 압구정로 343, 갤러리아백화점 지하1층 (압구정동)       수아당    한식   \n",
-       "3  서울특별시 강남구 역삼로 204, 삼환 아르누보 지하1층 B09,B10호 중 107...      알찬한끼    분식   \n",
-       "4                    서울특별시 강남구 삼성로96길 11, 지상2층 (삼성동)       세계관    한식   \n",
+       "                                                도로명전체주소      사업장명 업태구분명  \\\n",
+       "0                서울특별시 강남구 강남대로114길 18, 지상1층 102호 (논현동)       정식당    한식   \n",
+       "1                    서울특별시 강남구 강남대로 378, 준빌딩 지상1층 (역삼동)  채선당 샤브보트    한식   \n",
+       "2               서울특별시 강남구 압구정로 343, 갤러리아백화점 지하1층 (압구정동)       수아당    한식   \n",
+       "3     서울특별시 강남구 역삼로 204, 삼환 아르누보 지하1층 B09,B10호 중 107...      알찬한끼    분식   \n",
+       "4                       서울특별시 강남구 삼성로96길 11, 지상2층 (삼성동)       세계관    한식   \n",
+       "...                                                 ...       ...   ...   \n",
+       "8291                서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)        간코    일식   \n",
+       "8292            서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)      오토김밥    분식   \n",
+       "8293      서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)      마들마들    한식   \n",
+       "8294                   서울특별시 강남구 언주로151길 21, 지상1층 (신사동)        세바   경양식   \n",
+       "8295                서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)      구구구    경양식   \n",
        "\n",
-       "         좌표정보(x)        좌표정보(y)     시도  지역구          상세주소        사업장명_원본 검색여부  \\\n",
-       "0  202203.971845  444853.761458  서울특별시  강남구  강남대로114길 18,            정식당   가능   \n",
-       "1  202462.794327  443827.961945  서울특별시  강남구     강남대로 378,  채선당 샤브보트 강남역점   가능   \n",
-       "2  203470.848439  447369.579852  서울특별시  강남구     압구정로 343,            수아당   가능   \n",
-       "3  203453.074369  443736.685792  서울특별시  강남구      역삼로 204,           알찬한끼   가능   \n",
-       "4  204952.006872  445195.026116  서울특별시  강남구    삼성로96길 11,            세계관   가능   \n",
+       "            좌표정보(x)        좌표정보(y)     시도  지역구          상세주소          사업장명_원본  \\\n",
+       "0     202203.971845  444853.761458  서울특별시  강남구  강남대로114길 18,              정식당   \n",
+       "1     202462.794327  443827.961945  서울특별시  강남구     강남대로 378,    채선당 샤브보트 강남역점   \n",
+       "2     203470.848439  447369.579852  서울특별시  강남구     압구정로 343,              수아당   \n",
+       "3     203453.074369  443736.685792  서울특별시  강남구      역삼로 204,             알찬한끼   \n",
+       "4     204952.006872  445195.026116  서울특별시  강남구    삼성로96길 11,              세계관   \n",
+       "...             ...            ...    ...  ...           ...              ...   \n",
+       "8291  204669.543367  443873.621189  서울특별시  강남구      도곡로 401,      간코 롯데백화점강남점   \n",
+       "8292  201749.456414  446742.828124  서울특별시  강남구     압구정로 108,         오토김밥 신사점   \n",
+       "8293  202990.870783  447146.555568  서울특별시  강남구   압구정로42길 36,             마들마들   \n",
+       "8294  202731.421127  446609.460134  서울특별시  강남구   언주로151길 21,        세바(Sevva)   \n",
+       "8295  202153.410454  446748.562578  서울특별시  강남구   논현로161길 37,  구구구 (GOOGOOGOO)   \n",
        "\n",
-       "   index_original  \n",
-       "0               0  \n",
-       "1               1  \n",
-       "2               3  \n",
-       "3               5  \n",
-       "4               7  "
+       "     검색여부  \n",
+       "0      가능  \n",
+       "1      가능  \n",
+       "2      가능  \n",
+       "3      가능  \n",
+       "4      가능  \n",
+       "...   ...  \n",
+       "8291   가능  \n",
+       "8292   가능  \n",
+       "8293   가능  \n",
+       "8294   가능  \n",
+       "8295   가능  \n",
+       "\n",
+       "[8296 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## 인덱스 초기화 시켜줘야 돌아감\n",
+    "# 데이터 불러오기\n",
+    "original_res_df = pd.read_excel('combined_file.xlsx')\n",
     "\n",
-    "res_df.reset_index(inplace=True)\n",
-    "res_df.drop('index',axis=1,inplace=True)\n"
+    "# 복사본 생성\n",
+    "res_df = original_res_df.copy()\n",
+    "\n",
+    "# '검색여부'가 '가능'인 행만 선택하고 인덱스 리셋\n",
+    "res_df = res_df.loc[res_df['검색여부'] == '가능'].reset_index(drop=True)\n",
+    "\n",
+    "# 'Unnamed: 0' 컬럼 삭제\n",
+    "res_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "\n",
+    "res_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_df.drop(['Unnamed: 0'],axis=1,inplace=True)"
+    "res_info_df = pd.DataFrame()\n",
+    "restaurant_name_list = []\n",
+    "category_name_list = []\n",
+    "address_list = []\n",
+    "menu_list = []\n",
+    "price_list = []"
    ]
   },
   {
